# OB_Submitter

./: .env  .env.mainnet  .env.testnet  .gitignore  Cargo.toml  README.md  test.txt
crates/client/: Cargo.toml
crates/client/src/: cli.rs  command.rs  lib.rs  rpc.rs  scheduler.rs
crates/contract/: Cargo.toml
crates/contract/json/: ERC20.json  ORFeeManager.json
crates/contract/src/: lib.rs  tests.rs
crates/off-chain-state/: Cargo.toml
crates/off-chain-state/src/: data_example.rs  keccak256_hasher.rs  lib.rs  tests.rs  traits.rs  utils.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: chain_type.rs  constants.rs  env.rs  error.rs  func.rs  keccak256_hasher.rs  lib.rs  tests.rs  traits.rs  types.rs
crates/txs/: Cargo.toml
crates/txs/src/: funcs.rs  lib.rs  rocks_db.rs  sled_db.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
script/: rpc.txt
