[workspace]
members = [
    "crates/*",
    "bin/submitter/client",
]

default-members = [
    "bin/submitter/client",
]

[workspace.package ]
author = "YanOctavian"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YanOctavian/submitter"
rust-version = "1.70"

[workspace.dependencies]
ethers = { version = "2.0.8" }
tracing = "0.1"
tokio = { version = "1.18", features = ["full"] }

[profile.debug-fast]
inherits = "release"
debug = true



