[workspace]

members = [
    "crates/*",
    "bin/submitter/client",
]

default-members = [
    "bin/submitter/client",
]

#exclude = [
#    "crates/txs",
#]

[workspace.package ]
author = "YanOctavian"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YanOctavian/submitter"
rust-version = "1.70"

[workspace.dependencies]
tracing = "0.1"
tokio = { version = "1.18", features = ["full"] }
ethers = {git = "https://github.com/gakonst/ethers-rs.git"}

[profile.debug-fast]
inherits = "release"
debug = true

[patch.crates-io]
ethers = {git = "https://github.com/gakonst/ethers-rs.git"}
ethers-providers = {git = "https://github.com/gakonst/ethers-rs.git"}
sparse-merkle-tree =  { git = "https://github.com/YanOctavian/sparse-merkle-tree.git"}
[patch."https://github.com/quake/smt-rocksdb-store.git"]
smt-rocksdb-store = { git = "https://github.com/YanOctavian/smt-rocksdb-store.git", branch= "master" }





