[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
clokwerk = "0.4.0"
dialoguer = "0.10.4"
dotenv = "0.15.0"
ethers.workspace = true
state = { path = "../off-chain-state", package = "off-chain-state" }
tokio.workspace = true
