[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
primitives = { path = "../primitives"}
ethers.workspace = true
async-trait = "0.1.73"
anyhow = "1.0.75"
ethers-providers = "2.0.9"
serde = "1.0.188"
tracing.workspace = true
