[package]
name = "off-chain-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparse-merkle-tree = { git = "https://github.com/Orbiter-Finance/sparse-merkle-tree.git" }
blake2b-rs = "0.2.0"
smt-rocksdb-store = { git = "https://github.com/Orbiter-Finance/smt-rocksdb-store.git", branch = "master" }
ethers.workspace = true
primitives = { path = "../primitives" }
rocksdb = { package = "ckb-rocksdb", version = "0.19", default-features = false, features = [
    "snappy",
    "march-native",
] }
byte-slice-cast = "1.2.2"
tracing.workspace = true
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0.44"
tiny-keccak = "2.0.2"
ethabi = "18.0.0"
hex = "0.4.3"

[dev-dependencies]
