[package]
name = "txs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
lazy_static = "1.4.0"
reqwest = "0.11.18"
serde = "1.0.183"
serde_json = "1.0.105"
sled = "0.34.7"
sparse-merkle-tree = "0.6.1"
rocksdb = { package = "ckb-rocksdb", version = "0.19", default-features = false, features = ["snappy", "march-native"] }
primitives = { path = "../primitives" }
state = { path = "../off-chain-state", package = "off-chain-state" }
tokio.workspace = true
async-trait = "0.1.73"
ethers.workspace = true
anyhow = "1.0.75"
